﻿
29/2/2016:
* UP: Reserved_Cons removed from expr AST: it used to exist because of the evaluator, but it is not necessary as new data constructors X can be bound to Δ as (X, V_Cons (X, []))
* REFACT: scoped vars have now become a set of vars
* UP: split_prefix monadic function has now become split_for_gen and calls the pure version, which deals with Γ and scoped vars
* REFACT: fork monadic methods have been renamed to undo
* UP: UnitTest module improved even more


28/2/2016:
* UP: some work on scoped type variables
* REFACT: redesigned how log thresholds are set according to solution configuration and interpreter mode
* FIX: kind inference and type evaluation debug information revamped
* FIX: lambda rule of HML has been generalized to support annotations in a transparent way: all ftv are added to the prefix, whether belonging to an annotation or not
* FIX: subst_ty now substitutes kinds also to the result of a substitution


27/2/2016:
* UP: var normalization upgraded: it now supports a stack of normalization contexts, making the behaviour undoable and fitting with recursive uses; it also supports use of
      normalization context in a pure way, passing it as argument to pretty_normalized
* UP: UnitTest module text output reworked and polished
* FIX: unit tests are currenlty all correct
* UP: translated type defined for enforcing a strongly typed behaviour of the translation sub-system, which was not robust - now it is


26/2/2016:
* FIX: location column numbers and biases are probably wrong: fixed now but not sure it's really done
* UP: UnitTest messages rewritten using PPrint library of document formatting combinators


25/12/2016:
* REFACT: enormous and complicated redesign and abstraction of pattern and constructor factories in Absyn
* FIX: T_Forall is now pretty printed with kind annotations on quantified vars when kind is not star
* REFACT: Intrinsic.envs0 are now computed lazyly